[package]
name = "lutris-runner-dbus"
version = "0.1.0"
authors = ["Nyikos Zoltán <nyikoszoltan0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dict_derive = "0.3.1"
dbus-crossroads = "0.3.0"
dbus = "0.9.2"
anyhow = "*"
xdg = "2.2.0"
open = "1"
nix = "0.23.1"
[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]
